apps/base/servarr/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: seerr
    namespace: servarr
spec:
    selector:
        matchLabels:
            app: seerr
    template:
        metadata:
            labels:
                app: seerr
        spec:
            securityContext:
                fsGroup: 1000
                seccompProfile:
                    type: RuntimeDefault

            containers:
                - name: seerr
                  image: ghcr.io/seerr-team/seerr:preview-new-oidc
                  imagePullPolicy: Always
                  securityContext:
                      runAsUser: 1000
                      runAsGroup: 1000
                      runAsNonRoot: true
                      readOnlyRootFilesystem: false
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop: ["ALL"]
                  livenessProbe:
                      tcpSocket:
                          port: 5055
                      initialDelaySeconds: 0
                      failureThreshold: 3
                      timeoutSeconds: 1
                      periodSeconds: 10
                  readinessProbe:
                      tcpSocket:
                          port: 5055
                      initialDelaySeconds: 0
                      failureThreshold: 3
                      timeoutSeconds: 1
                      periodSeconds: 10
                  startupProbe:
                      tcpSocket:
                          port: 5055
                      initialDelaySeconds: 0
                      failureThreshold: 30
                      timeoutSeconds: 1
                      periodSeconds: 5
                  resources:
                      limits:
                          cpu: "0.5"
                          memory: "512Mi"
                      requests:
                          cpu: "0.25"
                          memory: "256Mi"
                  ports:
                      - name: webui
                        containerPort: 5055
                        protocol: TCP
                  volumeMounts:
                      - name: config
                        mountPath: "/app/config"

            volumes:
                - name: config
                  hostPath:
                      path: "/mnt/SSD/app-storage/seerr"
                      type: Directory
