apps/base/servarr/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: seerr
    namespace: servarr
spec:
    type: ClusterIP
    selector:
        app: seerr
    ports:
        - name: webui
          port: 5055
          protocol: TCP
