apps/base/servarr/seerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: seerr-ingress
    namespace: servarr
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`seerr.guibi.dev`)
          kind: Rule
          services:
              - name: seerr
                namespace: servarr
                port: 5055
                scheme: http
    tls:
        secretName: tls-guibi.dev
